# geoalchemy2

./: .codespellrc  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.txt  GeoAlchemy2_dev.yml  MANIFEST.in  README.rst  RELEASE.rst  TEST.rst  generate_type_stubs.py  install-spatialite.sh  pyproject.toml  requirements-doc.txt  requirements-mypy.txt  requirements-rtd.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: test_and_publish.yml
benchmarks/: benchmarks.py
debian/: changelog  control  copyright  rules
doc/: Makefile  admin.rst  alembic.rst  alembic_helpers.rst  comparator.rst  conf.py  core_tutorial.rst  dialect_specific_features.rst  elements.rst  index.rst  make.bat  migrate.rst  mssql_dialect.rst  mysql_mariadb_dialect.rst  orm_tutorial.rst  plugin.rst  shape.rst  spatial_functions.rst  spatial_operators.rst  spatialite_dialect.rst  spatialite_tutorial.rst  types.rst
doc/_templates/: sidebar-about.html  sidebar-links.html  sidebar-logo.html
doc/_themes/flask/: layout.html  theme.conf
doc/_themes/flask/static/: flasky.css_t
geoalchemy2/: __init__.py  _functions.py  _functions_helpers.py  _wkb_wkt.py  alembic_helpers.py  comparator.py  compat.py  elements.py  functions.py  functions.pyi  shape.py  test_wkb.txt  types.py  utils.py  wkb.py
geoalchemy2/admin/: __init__.py  plugin.py
geoalchemy2/admin/dialects/: __init__.py  common.py  geopackage.py  mariadb.py  mssql.py  mysql.py  postgresql.py  sqlite.py
geoalchemy2/dialects/: common.py  mysql.py  postgresql.py  sqlite.py
geoalchemy2/sql/: functions.py
geoalchemy2/tests/: test_comparator.py  test_elements.py  test_functional.py  test_functions.py  test_shape.py  test_types.py
geoalchemy2/types/: __init__.py
geoalchemy2/types/dialects/: __init__.py  common.py  geopackage.py  mariadb.py  mssql.py  mysql.py  postgresql.py  sqlite.py
test_container/: .gitignore  Dockerfile  Dockerfile_mariadb  build.sh  build_mariadb.sh  docker-compose.yml  run.sh  run_mariadb.sh  start.sh  stop.sh
test_container/helpers/: configure_cockroach.sh  configure_mariadb.sh  configure_mysql.sh  configure_postgres.sh  entrypoint.sh  init_mariadb.sh  init_mssql.sh  init_mysql.sh  init_postgres.sh  install_requirements.sh
tests/: __init__.py  conftest.py  create_database.sql  schema_fixtures.py  setup_tests.sh  test_admin_common.py  test_admin_geopackage.py  test_alembic_migrations.py  test_comparator.py  test_compare_benchmarks.py  test_elements.py  test_functional.py  test_functional_geopackage.py  test_functional_mssql.py  test_functional_mysql.py  test_functional_postgresql.py  test_functional_spatialite.py  test_functional_sqlite.py  test_functions.py  test_pickle.py  test_plugin.py  test_shape.py  test_type_decorator.py  test_types.py  test_types_mssql.py
tests/alembic_config/: alembic.ini
tests/benchmarks/: test_insert.py  test_insert_select.py
tests/data/: spatialite_ge_4.sqlite  spatialite_geopackage.gpkg  spatialite_lt_4.sqlite
tests/gallery/: test_decipher_raster.py  test_disable_wrapping.py  test_insert_raster.py  test_length_at_insert.py  test_orm_mapped_v2.py  test_raster_transform.py  test_specific_compilation.py  test_summarystatsagg.py  test_type_decorator.py
tools/: benchmark_wkt_element_fast_paths.py  compare_benchmarks.py
