# SETUPTOOLS
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# BLACK
[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

# PYDOCSTYLE
[tool.pydocstyle]
# ignore the following:
#   - D107: Missing docstring in __init__
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
convention = "google"

# ISORT
[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

# PYTEST
[tool.pytest.ini_options]
addopts = '-k "not (test_insert_select.py and (10 or 350))"'
testpaths = [
    "tests",
]

# MYPY
[[tool.mypy.overrides]]
module = [
    "importlib.*",
    "psycopg2cffi",
    "rasterio",
    "shapely",
    "shapely.*"
]
ignore_missing_imports = true
