# SETUPTOOLS
[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "GeoAlchemy2"
dynamic = ["version"]
description = "Using SQLAlchemy with Spatial Databases"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eric Lemoine", email = "eric.lemoine@gmail.com"},
    {name = "Adrien Berchet", email = "adrien.berchet@gmail.com"},
]
keywords = ["geo", "gis", "sqlalchemy", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "SQLAlchemy>=1.4",
    "packaging",
]

[project.optional-dependencies]
shapely = ["Shapely>=1.7"]

[project.urls]
Homepage = "https://geoalchemy-2.readthedocs.io/en/stable/"
Tracker = "https://github.com/geoalchemy/geoalchemy2/issues"
Source = "https://github.com/geoalchemy/geoalchemy2"

[project.entry-points."sqlalchemy.plugins"]
geoalchemy2 = "geoalchemy2.admin.plugin:GeoEngine"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["geoalchemy2*"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["geoalchemy2/functions.pyi"]  # Auto-generated file

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "E203",  # whitespace before ':' (handled by formatter)
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/gallery/*.py" = ["D205", "D415"]  # Allow sphinx-gallery style docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# PYTEST
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# MYPY
[[tool.mypy.overrides]]
module = [
    "importlib.*",
    "psycopg2cffi",
    "rasterio",
    "shapely",
    "shapely.*"
]
ignore_missing_imports = true
